<resources>
    <string name="app_name">CoffeePedia</string>
    <string name="header_title">CoffeePedia</string>
    <string name="add_bean">Add Bean</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="coffee_beans">Coffee Beans</string>
    <string name="coffee_bean_input_name">Name</string>
    <string name="coffee_bean_input_type">Type</string>
    <string name="coffee_bean_input_origin">Origin</string>
    <string name="coffee_bean_input_altitude">Altitude</string>
    <string name="coffee_bean_input_process">Process</string>
    <string name="coffee_bean_input_aroma">Aroma</string>
    <string name="coffee_bean_input_taste_note">Taste Note</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_bean">Edit Bean</string>
    <string name="form_invalid_text">Please fill all fields</string>
    <string name="success_add_coffee_bean">Coffee bean added</string>
    <string name="success_edit_coffee_bean">Coffe bean edited</string>
    <string name="success_delete_coffee_bean">Coffee bean deleted</string>
    <string name="brew_methods">Brew Methods</string>
    <string name="brew_method_input_name">Name</string>
    <string name="brew_method_input_description">Description</string>
    <string name="add_brew_method">Add Brew Method</string>
    <string name="edit_brew_method">Edit Brew Method</string>
    <string name="success_add_brew_method">Brew method added</string>
    <string name="success_edit_brew_method">Brew method edited</string>
    <string name="success_delete_brew_method">Brew method deleted</string>
    <string name="brew_recipes">Brew Recipes</string>
    <string name="add_brew_recipe">Add Brew Recipe</string>
    <string name="brew_recipe_input_name">Name</string>
    <string name="brew_recipe_input_roast_level">Roast Level</string>
    <string name="brew_recipe_input_grind_level">Grind Level</string>
    <string name="brew_recipe_input_water_temperature">Water Temperature</string>
    <string name="brew_recipe_input_brew_time">Brew Time</string>
    <string name="brew_recipe_input_brew_steps">Brew Steps</string>
    <string name="edit_brew_recipe">Edit Brew Recipe</string>
    <string name="success_add_brew_recipe">Brew Recipe Added</string>
    <string name="success_edit_brew_recipe">Brew Recipe edited</string>
    <string name="success_delete_brew_recipe">Brew recipe deleted</string>
    <string name="recipes">Recipes</string>
    <string name="success_export_pdf">Data exported to PDF</string>
    <string name="coffee_reviews">Coffee Reviews</string>
    <string name="failure_fetching_reviews">Failed to get reviews. Please check your internet connection and try again</string>
    <string name="empty_related_brew_recipes">No Brew Recipes</string>
    <string name="no_internet_connection">No internet connection. Retrying…</string>
    <string name="permission_rationale">Export data to PDF feature requires a permission to write to your storage.
        Please grant the permission in order to use the feature.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel_permission">Cancel</string>
    <string name="permission_denied">Please enable Storage permission for this app.</string>
    <string name="reminder_set">Reminder set</string>
</resources>
