<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.activity.PermissionRationaleActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/permission_rationale" />

    <Button
        android:id="@+id/button_grant_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission"
        android:onClick="grantPermission" />

    <Button
        android:id="@+id/button_cancel_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_permission"
        android:onClick="cancelPermission" />

</LinearLayout>
