<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="brewMethodViewModel"
            type="id.ac.ui.cs.mobileprogramming.farhanazyumardhiazmi.coffeepedia.ui.viewmodel.BrewMethodViewModel" />

        <variable
            name="callback"
            type="id.ac.ui.cs.mobileprogramming.farhanazyumardhiazmi.coffeepedia.ui.callback.BrewMethodClickCallback" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/brew_method_item"
            app:brewMethod="@{brewMethodViewModel.brewMethodWithBrewRecipes.brewMethod}" />

        <Button
            android:id="@+id/button_add_brew_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_brew_recipe"
            android:onClick="@{() -> callback.onClick(brewMethodViewModel.brewMethodWithBrewRecipes.brewMethod)}"/>

        <Button
            android:id="@+id/button_edit_brew_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/button_delete_brew_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipes">
        </TextView>

        <ListView
            android:id="@+id/list_related_brew_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>
</layout>