<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CoffeeBeanFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_coffee_bean_form"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_name" />

        <EditText
            android:id="@+id/input_coffee_bean_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Name" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_type" />

        <EditText
            android:id="@+id/input_coffee_bean_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Type" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_origin" />

        <EditText
            android:id="@+id/input_coffee_bean_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Origin" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_altitude" />

        <EditText
            android:id="@+id/input_coffee_bean_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Altitude" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_process" />

        <EditText
            android:id="@+id/input_coffee_bean_process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Process" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_aroma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_aroma" />

        <EditText
            android:id="@+id/input_coffee_bean_aroma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Aroma" />

        <TextView
            style="@style/itemText"
            android:labelFor="@id/input_coffee_bean_taste_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_bean_input_taste_note" />

        <EditText
            android:id="@+id/input_coffee_bean_taste_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Coffee Bean Taste Note" />

        <Button
            android:id="@+id/button_coffee_bean_submit"
            style="@style/button"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>