<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BrewRecipeFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_brew_recipe_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:labelFor="@id/input_brew_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_recipe_input_name" />

        <EditText
            android:id="@+id/input_brew_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Brew Recipe Name" />

        <TextView
            android:labelFor="@id/input_brew_recipe_roast_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_recipe_input_roast_level" />

        <EditText
            android:id="@+id/input_brew_recipe_roast_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Brew Recipe Roast Level" />

        <TextView
            android:labelFor="@id/input_brew_recipe_grind_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_recipe_input_grind_level" />

        <EditText
            android:id="@+id/input_brew_recipe_grind_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Brew Recipe Grind Level" />

        <TextView
            android:labelFor="@id/input_brew_recipe_water_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_recipe_input_water_temperature" />

        <EditText
            android:id="@+id/input_brew_recipe_water_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Brew Recipe Water Temperature" />

        <TextView
            android:labelFor="@id/input_brew_recipe_brew_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_recipe_input_brew_time" />

        <EditText
            android:id="@+id/input_brew_recipe_brew_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Brew Recipe Brew Time" />

        <TextView
            android:labelFor="@id/input_brew_recipe_brew_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_recipe_input_brew_steps" />

        <EditText
            android:id="@+id/input_brew_recipe_brew_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Input Brew Recipe Brew Steps" />

        <Button
            android:id="@+id/button_brew_recipe_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>