<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.BrewMethodListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brew_methods"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/brew_method_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/button_add_brew_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_brew_method"
                android:onClick="startBrewMethodAddView"/>

            <Button
                android:id="@+id/button_export_brew_method_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_to_pdf" />

        </LinearLayout>

    </ScrollView>

</layout>