<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.CoffeeBeanListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee_beans"
                android:layout_marginTop="30dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coffee_bean_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/button_add_coffee_bean"
                style="@style/button"
                android:layout_height="wrap_content"
                android:onClick="startCoffeeBeanAddView"
                android:text="@string/add_bean" />

            <Button
                android:id="@+id/button_export_coffee_bean_list"
                style="@style/button"
                android:layout_height="wrap_content"
                android:text="@string/export_to_pdf" />

        </LinearLayout>

    </ScrollView>

</layout>